# ChangeLog for media-gfx/aoi
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/aoi/ChangeLog,v 1.12 2006/01/10 00:11:39 vanquirius Exp $

*aoi-2.2 (10 Jan 2006)

  10 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> metadata.xml,
  +aoi-2.2.ebuild:
  2.2 version bump. Hopefully fixes bugs 68175 and 63013. Thanks to all
  reporters. Note that we are no longer building this from source. Also,
  adding graphics as a herd.

  15 Sep 2005; Mark Loeser <halcy0n@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  Add app-arch/unzip to DEPEND; bug #69831

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  move dev-java/jmf dev-java/jmf-bin

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  Fix use invocation

  05 May 2004; <SeJo@gentoo.org> aoi-1.6.ebuild:
  added ~ppc keyword

  26 Mar 2004; David Holm <dholm@gentoo.org> aoi-1.4.ebuild, aoi-1.6.ebuild:
  Backed out of ppc and ~ppc while waiting fort portage upgrade.

  25 Mar 2004; Joshua Kinard <kumba@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  As far as I know, mips doesn't have a JDK available to it, thus this creates a
  dependency issue for this package. Removing mips keywords until further
  notice.

  17 Feb 2004; Gustavo Zacarias <gustavoz@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  unkeyworded hppa, we don't have jdk

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> aoi-1.4.ebuild,
  aoi-1.6.ebuild:
  Remove alpha keywords because this package eventually depends on >=jdk-1.4,
  which we don't have on alpha

*aoi-1.6 (10 Oct 2003)

  10 Oct 2003; Brandy Westcott brandy@gentoo.org aoi-1.6.ebuild:
  Version bump to 1.6. Initial ebuild to install AoI from source.

*aoi-1.4 (15 May 2003)

  15 May 2003; Dylan Carlson <absinthe@gentoo.org> aoi-1.4.ebuild, files/aoi:
  Initial import.
