@@ -1,7 +1,7 @@
 MD5 c6be614058405a4f68494676a8d28acb ChangeLog 1901
 MD5 0755b5b6b83c178025bf0196d4b6d8f8 aoi-1.4.ebuild 1231
 MD5 3e498ceae95cb1123df1d498852a1b73 aoi-1.6.ebuild 1422
-MD5 181576a5f9412800a72792d8fd5d6d03 aoi-2.2.ebuild 1175
+MD5 53deceafeac0c35bf25ebf140c4066a1 aoi-2.2.ebuild 1132
 MD5 727b608356405769368445d94052541c files/aoi 857
 MD5 3ecf40985d61919e8ca250e839e013a3 files/digest-aoi-1.4 121
 MD5 4ec032a15afd71be0cd9cc75ea3685ed files/digest-aoi-1.6 114
